# quickfixc

./: CMakeLists.txt  LICENSE  README.md
include/: Application_c.h  Dictionary_c.h  Errors.h  FieldBase_c.h  FileLog_c.h  FileStore_c.h  Log_c.h  MessageStore_c.h  Message_c.h  SSLSocketInitiator_c.h  SessionID_c.h  SessionSettings_c.h  SocketInitiator_c.h  Types.h  quickfixc.h
src/: Application_c.cpp  Dictionary_c.cpp  Errors.cpp  FieldBase_c.cpp  FileLog_c.cpp  FileStore_c.cpp  Log_c.cpp  MessageStore_c.cpp  Message_c.cpp  SSLSocketInitiator_c.cpp  SessionID_c.cpp  SessionSettings_c.cpp  SocketInitiator_c.cpp
